# BlindTestAuto-RUST-ESGI

./: .gitignore  Cargo.toml  README.md
src/: ffmpeg.rs  ffmpeg_command.rs  lib.rs  main.rs  model.rs  timecode.rs  validate.rs  wizard.rs
